--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
               ▫️ SweeKnowHow
             </option>
             <option value=" 4Paws ">
-              ▫️ 4Paws
+              ▫️ 4Paws..
             </option>
 
           </select>
